--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Uban360.GitHub.io by uban360</title>
+    <title>优办开放平台开发者文档 by uban360</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -16,14 +15,11 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Uban360.GitHub.io</h1>
-        <p class="header"></p>
+        <h1>优办开放平台开发者文档</h1>
+        <p></p>
 
 
-
-        <ul>
-          <li><a class="buttons github" href="https://github.com/uban360">GitHub Profile</a></li>
-        </ul>
+        <p class="view"><a href="https://github.com/uban360">View My GitHub Profile</a></p>
 
       </header>
       <section>
@@ -53,10 +49,10 @@
 <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
       </section>
       <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+    <script src="javascripts/scale.fix.js"></script>
+    
   </body>
 </html>
