--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>优办开放平台开发者文档 by uban360</title>
+    <title>优办开放平台开发者文档</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -17,10 +17,6 @@
       <header>
         <h1>优办开放平台开发者文档</h1>
         <p></p>
-
-
-        <p class="view"><a href="https://github.com/uban360">View My GitHub Profile</a></p>
-
       </header>
       <section>
         <h3>
