--- a/index.html
+++ b/index.html
@@ -52,80 +52,173 @@
 <h2>
 <a id="3-开放平台接口权限说明" class="anchor" href="#3-%E5%BC%80%E6%94%BE%E5%B9%B3%E5%8F%B0%E6%8E%A5%E5%8F%A3%E6%9D%83%E9%99%90%E8%AF%B4%E6%98%8E" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>3， 开放平台接口权限说明</h2>
 
-<p>不同类型的开放平台账号具有不同的接口权限，见下表
-接口名称
-未认证开放平台账号
-优办认证开放平台账号
-获取accessToken
-有
-有
-获取用户基本信息
-无
-有
-其他接口待补充</p>
+<p>不同类型的开放平台账号具有不同的接口权限，见下表</p>
+
+<table>
+<thead>
+<tr>
+<th>接口名称</th>
+<th>未认证开放平台账号</th>
+<th>优办认证开放平台账号</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>获取accessToken</td>
+<td>有</td>
+<td>有</td>
+</tr>
+<tr>
+<td>获取用户基本信息</td>
+<td>无</td>
+<td>有</td>
+</tr>
+<tr>
+<td>其他接口待补充</td>
+<td>...</td>
+<td>...</td>
+</tr>
+</tbody>
+</table>
 
 <h2>
 <a id="4-开放平台接口调用频率说明" class="anchor" href="#4-%E5%BC%80%E6%94%BE%E5%B9%B3%E5%8F%B0%E6%8E%A5%E5%8F%A3%E8%B0%83%E7%94%A8%E9%A2%91%E7%8E%87%E8%AF%B4%E6%98%8E" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>4， 开放平台接口调用频率说明</h2>
 
-<p>(1)开放平台的调用接口并不是无限制的。为了防止公众号的程序错误而引发优办服务器负载异常，默认情况下，每个开发者应用调用接口都不能超过一定限制，当超过一定限制时，调用对应接口会收到如下错误返回码
-{"status":4006,"message":"接口调用频率超过限制"}
-(2)认证账号的调用量清零。针对认证的开发者账号，每月提供10次清零操作机会，可以针对同一接口，也可以针对不同接口清零。新注册账号接口调用频率见下表
-接口
-每日限额
-获取accessToken
-2000
-获取用户基本信息
-5000000
-其他接口待补充</p>
+<ul>
+<li>开放平台的调用接口并不是无限制的。为了防止公众号的程序错误而引发优办服务器负载异常，默认情况下，每个开发者应用调用接口都不能超过一定限制，当超过一定限制时，调用对应接口会收到如下错误返回码</li>
+</ul>
+
+<pre><code>
+{"status":4006,"message":"接口调用频率超过限制"} 
+
+</code></pre>
+
+<ul>
+<li>认证账号的调用量清零。针对认证的开发者账号，每月提供10次清零操作机会，可以针对同一接口，也可以针对不同接口清零。新注册账号接口调用频率见下表</li>
+</ul>
+
+<table>
+<thead>
+<tr>
+<th>接口名称</th>
+<th>每日限额</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>获取accessToken</td>
+<td>2000</td>
+</tr>
+<tr>
+<td>获取用户基本信息</td>
+<td>5000000</td>
+</tr>
+<tr>
+<td>其他接口待补充</td>
+<td>...</td>
+</tr>
+</tbody>
+</table>
 
 <h2>
 <a id="5-开放平台接口返回说明" class="anchor" href="#5-%E5%BC%80%E6%94%BE%E5%B9%B3%E5%8F%B0%E6%8E%A5%E5%8F%A3%E8%BF%94%E5%9B%9E%E8%AF%B4%E6%98%8E" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>5， 开放平台接口返回说明</h2>
 
-<p>应用每次调用接口时，可能获得正确或错误的返回码，开发者可以根据返回码信息调试接口，排查错误。见下表
-返回码
-说明
-0
-调用成功
--1
-优办系统错误
-4000
-用户登录token错误
-4001
-用户登录token和accessToken错误，重新获取
-4002
-accessToken错误
-4003
-AccessToken超时
-4004
-AccessToken刷新过于频繁，注意每天的接口调用次数
-4005
-accessToken错误，一般是系统原因，重新获取或者联系客服
-4006
-接口调用频率超过限制
-4007
-获取accessToken时appId或者appSecret错误
-4008
-缺少accessToken参数
-4009
-需要get请求
-4010
-需要post请求
-4011
-需要https请求
-4012
-Post数据包为空
-4013
-Api无权限
-4014
-调用来源ip不在ip白名单
-4015
-不合法的callback url
-4016
-企业未对该应用授权
-4500
-用户uid不存在或者错误
-4501
-缺少uid参数</p>
+<p>应用每次调用接口时，可能获得正确或错误的返回码，开发者可以根据返回码信息调试接口，排查错误。见下表</p>
+
+<table>
+<thead>
+<tr>
+<th>返回码</th>
+<th>说明</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>0</td>
+<td>调用成功</td>
+</tr>
+<tr>
+<td>-1</td>
+<td>优办开放平台系统错误</td>
+</tr>
+<tr>
+<td>4000</td>
+<td>用户登录token错误</td>
+</tr>
+<tr>
+<td>4001</td>
+<td>用户登录token和accessToken错误，重新获取</td>
+</tr>
+<tr>
+<td>4002</td>
+<td>accessToken错误</td>
+</tr>
+<tr>
+<td>4003</td>
+<td>AccessToken超时</td>
+</tr>
+<tr>
+<td>4004</td>
+<td>AccessToken刷新过于频繁，注意每天的接口调用次数</td>
+</tr>
+<tr>
+<td>4005</td>
+<td>accessToken错误，一般是系统原因，重新获取或者联系客服</td>
+</tr>
+<tr>
+<td>4006</td>
+<td>接口调用频率超过限制</td>
+</tr>
+<tr>
+<td>4007</td>
+<td>获取accessToken时appId或者appSecret错误</td>
+</tr>
+<tr>
+<td>4008</td>
+<td>缺少accessToken参数</td>
+</tr>
+<tr>
+<td>4009</td>
+<td>需要get请求</td>
+</tr>
+<tr>
+<td>4010</td>
+<td>需要post请求</td>
+</tr>
+<tr>
+<td>4011</td>
+<td>需要https请求</td>
+</tr>
+<tr>
+<td>4012</td>
+<td>Post数据包为空</td>
+</tr>
+<tr>
+<td>4013</td>
+<td>Api无权限</td>
+</tr>
+<tr>
+<td>4014</td>
+<td>调用来源ip不在ip白名单</td>
+</tr>
+<tr>
+<td>4015</td>
+<td>不合法的callback url</td>
+</tr>
+<tr>
+<td>4016</td>
+<td>企业未对该应用授权</td>
+</tr>
+<tr>
+<td>4500</td>
+<td>用户uid不存在或者错误</td>
+</tr>
+<tr>
+<td>4501</td>
+<td>缺少uid参数</td>
+</tr>
+</tbody>
+</table>
 
 <h1>
 <a id="二----开始开发" class="anchor" href="#%E4%BA%8C----%E5%BC%80%E5%A7%8B%E5%BC%80%E5%8F%91" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>二，    开始开发</h1>
@@ -133,100 +226,193 @@ Api无权限
 <h2>
 <a id="1-接入指南" class="anchor" href="#1-%E6%8E%A5%E5%85%A5%E6%8C%87%E5%8D%97" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>1， 接入指南</h2>
 
-<p>概述
-接入优办开放平台，开发者需要完成以下3步：
-a.  提交服务器配置
-由于目前开发者后台还在公测中，还未对正式开发者开放，所有需要开发者把以下信息通过以下格式，以邮件（<a href="mailto:luohj@shinemo.com">luohj@shinemo.com</a>）发送给优办后台超级管理员，暂时由超级管理员负责录入,录入成功后会返回应用的appId和appSecret。
-名称
-说明
-开发者名字</p>
+<h3>
+<a id="概述" class="anchor" href="#%E6%A6%82%E8%BF%B0" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>概述</h3>
 
-<p>开发者地址</p>
+<blockquote>
+<p>接入优办开放平台，开发者需要完成以下3步：</p>
 
-<p>开发者联系手机号</p>
+<ul>
+<li>1.1 提交服务器配置
+由于目前开发者后台还在公测中，还未对正式开发者开放，所有需要开发者把以下信息通过以下格式，以邮件（<em><a href="mailto:luohj@shinemo.com">luohj@shinemo.com</a></em>）发送给优办后台超级管理员，暂时由超级管理员负责录入,录入成功后会返回应用的** appId和appSecret** 。</li>
+</ul>
+</blockquote>
 
-<p>开发者身份证号</p>
+<table>
+<thead>
+<tr>
+<th>名称</th>
+<th>说明</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>开发者名字</td>
+<td>张三</td>
+</tr>
+<tr>
+<td>开发者地址</td>
+<td>浙江省杭州市西湖区文二西路888号我的公司</td>
+</tr>
+<tr>
+<td>开发者联系手机号</td>
+<td>18888888888</td>
+</tr>
+<tr>
+<td>开发者身份证号</td>
+<td>370686199904440000</td>
+</tr>
+<tr>
+<td>开发者照片</td>
+<td>照片形式放到附件中</td>
+</tr>
+<tr>
+<td>开发者企业名称</td>
+<td>...</td>
+</tr>
+<tr>
+<td>开发者企业地址</td>
+<td>...</td>
+</tr>
+<tr>
+<td>开发者企业法人代表名字</td>
+<td>...</td>
+</tr>
+<tr>
+<td>开发者企业法人代表身份证号</td>
+<td>...</td>
+</tr>
+<tr>
+<td>开发者企业营业执照</td>
+<td>照片形式放到附件</td>
+</tr>
+<tr>
+<td>开发者企业类型</td>
+<td>...</td>
+</tr>
+<tr>
+<td>应用名称</td>
+<td>...</td>
+</tr>
+<tr>
+<td>应用icon</td>
+<td>照片形式放到附件</td>
+</tr>
+<tr>
+<td>应用描述</td>
+<td>256字以内</td>
+</tr>
+<tr>
+<td>服务器白名单ip（优办开放平台服务端只允许白名单内的ip访问，逗号分隔）</td>
+<td>...</td>
+</tr>
+<tr>
+<td>H5地址（应用如果是h5须填写h5地址）</td>
+<td>...</td>
+</tr>
+<tr>
+<td>Android_feature(应用如果是native，填写android的应用信息)</td>
+<td>...</td>
+</tr>
+<tr>
+<td>Ios_feature(应用如果是native，填写ios的应用信息)</td>
+<td>...</td>
+</tr>
+<tr>
+<td>应用的语言版本（中文 ，英文…）</td>
+<td>...</td>
+</tr>
+<tr>
+<td>应用发布到的客户端（优办，集团彩云，联通客户端，全部）</td>
+<td>...</td>
+</tr>
+<tr>
+<td>应用需要使用的接口列表（目前只有获取用户信息）</td>
+<td>...</td>
+</tr>
+<tr>
+<td>应用的可见范围（企业名称或者全部）</td>
+<td>...</td>
+</tr>
+</tbody>
+</table>
 
-<p>开发者照片
-照片形式放到附件中
-开发者企业名称</p>
-
-<p>开发者企业地址</p>
-
-<p>开发者企业法人代表名字</p>
-
-<p>开发者企业法人代表身份证号</p>
-
-<p>开发者企业营业执照
-照片形式放到附件
-开发者企业类型</p>
-
-<p>应用名称</p>
-
-<p>应用icon
-照片形式放到附件
-应用描述</p>
-
-<p>服务器白名单ip（优办开放平台服务端只允许白名单内的ip访问，逗号分隔）</p>
-
-<p>H5地址（应用如果是h5须填写h5地址）</p>
-
-<p>Android_feature(应用如果是native，填写android的应用信息)</p>
-
-<p>Ios_feature(应用如果是native，填写ios的应用信息)</p>
-
-<p>应用的语言版本（中文 ，英文…）</p>
-
-<p>应用发布到的客户端（优办，集团彩云，联通客户端，全部）</p>
-
-<p>应用需要使用的接口列表（目前只有获取用户信息）</p>
-
-<p>应用的可见范围（企业名称或者全部）</p>
-
-<p>b.  验证服务器地址有效性（暂时略过）
-c.  依据接口文档实现业务逻辑
+<ul>
+<li>1.2   验证服务器地址有效性（暂时略过）</li>
+<li>1.3   依据接口文档实现业务逻辑
 调用各接口时，一般会获得正确的结果，具体结果可见对应接口的说明。返回错误时，可根据返回码来查询错误原因。
-另请注意，开放平台接口只支持80接口</p>
+另请注意，开放平台接口只支持80接口</li>
+</ul>
 
 <h2>
 <a id="2-获取接口调用凭据accesstoken" class="anchor" href="#2-%E8%8E%B7%E5%8F%96%E6%8E%A5%E5%8F%A3%E8%B0%83%E7%94%A8%E5%87%AD%E6%8D%AEaccesstoken" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2， 获取接口调用凭据（accessToken）</h2>
 
+<blockquote>
 <p>accessToken是开放平台的全局唯一票据，开放平台各接口时都需使用accessToken。开发者需要进行妥善保存。accessToken的存储至少要保留512个字符空间。accessToken的有效期目前为2个小时，需定时刷新，重复获取将导致上次获取的accessToken失效。</p>
+</blockquote>
 
-<p>1、为了保密appSecrect，第三方需要一个accessToken获取和刷新的中控服务器。而其他业务逻辑服务器所使用的accessToken均来自于该中控服务器，不应该各自去刷新，否则会造成accessToken覆盖而影响业务；
-2、目前accessToken的有效期通过返回的expireIn来传达，目前是7200秒之内的值。中控服务器需要根据这个有效时间提前去刷新新accessToken。在刷新过程中，中控服务器对外输出的依然是老accessToken，此时公众平台后台会保证在刷新短时间内，新老accessToken都可用，这保证了第三方业务的平滑过渡；
-3、accessToken的有效时间可能会在未来有调整，所以中控服务器不仅需要内部定时主动刷新，还需要提供被动刷新accessToken的接口，这样便于业务服务器在API调用获知accessToken已超时的情况下，可以触发accessToken的刷新流程。
-使用AppID和AppSecret调用本接口来获取accessToken。AppID和AppSecret可在邮件回复中获得（需要提供上述的开发者信息邮件给超级管理员，且帐号没有异常状态）</p>
+<ul>
+<li>2.1 为了保密appSecrect，第三方需要一个accessToken获取和刷新的中控服务器。而其他业务逻辑服务器所使用的accessToken均来自于该中控服务器，不应该各自去刷新，否则会造成accessToken覆盖而影响业务；</li>
+<li>2.2 目前accessToken的有效期通过返回的expireIn来传达，目前是7200秒之内的值。中控服务器需要根据这个有效时间提前去刷新新accessToken。在刷新过程中，中控服务器对外输出的依然是老accessToken，此时公众平台后台会保证在刷新短时间内，新老accessToken都可用，这保证了第三方业务的平滑过渡；</li>
+<li>2.3 accessToken的有效时间可能会在未来有调整，所以中控服务器不仅需要内部定时主动刷新，还需要提供被动刷新accessToken的接口，这样便于业务服务器在API调用获知accessToken已超时的情况下，可以触发accessToken的刷新流程。
+使用AppID和AppSecret调用本接口来获取accessToken。AppID和AppSecret可在邮件回复中获得（需要提供上述的开发者信息邮件给超级管理员，且帐号没有异常状态）</li>
+</ul>
 
-<p>接口调用请求说明
-http请求方式: GET
-http://youbanapihost/openapi/token/get?appId=APPID&amp;appSecret=APPSECRET
-参数说明：
-参数
-是否必须
-描述
-appId
-是
-应用注册成功后返回
-appSecret
-是
-应用注册成功后返回</p>
+<p>** 接口调用请求说明 **</p>
 
-<p>返回说明：
-正常情况下优办开放平台会返回下述JSON数据包给用户
+<ul>
+<li>http请求方式: GET</li>
+</ul>
+
+<p><code>http://youbanapihost/openapi/token/get?appId=APPID&amp;appSecret=APPSECRET</code></p>
+
+<ul>
+<li><p>参数说明：
+参数 | 是否必须 | 描述
+------------ | ------------- | -------------
+appId | 是 | 应用注册成功后返回
+appSecret | 是 | 应用注册成功后返回</p></li>
+<li><p>返回说明：
+正常情况下优办开放平台会返回下述JSON数据包给用户</p></li>
+</ul>
+
+<pre><code>
 {"status":0,"data":{"accessToken":"MDAwMjM0M0RBNjIwMURENDAxOTJDRkE0MkVGMDlERjQ5MjVFODAzQTlFMThERDBCMzNBNzFEMjBFMkRCNjExRDgxQjM3RkU0QzM1NkMwQzM5NkNCODUyN0JFQTE1OUE5OUUzMg==","expiresIn":7200}}
-参数
-描述
-status
-开放平台处理状态
-data
-处理成功后会把数据字段放到这里
-accessToken
-访问凭据
-expiresIn
-凭证有效时间，单位：秒
-错误时开放平台会返回错误码等信息，JSON数据包示例如下（该示例为AppID无效错误）
-{"status":4007,"message":"获取accessToken时appId或者appSecret错误"}</p>
+
+</code></pre>
+
+<table>
+<thead>
+<tr>
+<th>参数</th>
+<th>描述</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>status</td>
+<td>开放平台处理状态</td>
+</tr>
+<tr>
+<td>data</td>
+<td>处理成功后会把数据字段放到这里</td>
+</tr>
+<tr>
+<td>accessToken</td>
+<td>访问凭据</td>
+</tr>
+<tr>
+<td>expiresIn</td>
+<td>凭证有效时间，单位：秒</td>
+</tr>
+</tbody>
+</table>
+
+<p>错误时开放平台会返回错误码等信息，JSON数据包示例如下（该示例为AppID无效错误）</p>
+
+<pre><code>{"status":4007,"message":"获取accessToken时appId或者appSecret错误"}
+
+</code></pre>
 
 <h2>
 <a id="3-测试号申请暂未开放" class="anchor" href="#3-%E6%B5%8B%E8%AF%95%E5%8F%B7%E7%94%B3%E8%AF%B7%E6%9A%82%E6%9C%AA%E5%BC%80%E6%94%BE" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>3， 测试号申请（暂未开放）</h2>
@@ -240,9 +426,11 @@ expiresIn
 <h1>
 <a id="三----获取用户信息" class="anchor" href="#%E4%B8%89----%E8%8E%B7%E5%8F%96%E7%94%A8%E6%88%B7%E4%BF%A1%E6%81%AF" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>三，    获取用户信息</h1>
 
-<p>1，    获取用户信息（优办登录token机制）</p>
+<h2>
+<a id="1-获取用户信息优办登录token机制" class="anchor" href="#1-%E8%8E%B7%E5%8F%96%E7%94%A8%E6%88%B7%E4%BF%A1%E6%81%AF%E4%BC%98%E5%8A%9E%E7%99%BB%E5%BD%95token%E6%9C%BA%E5%88%B6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>1， 获取用户信息（优办登录token机制）</h2>
 
-<p>2，    获取用户信息（用户uid机制）</p>
+<h2>
+<a id="2-获取用户信息用户uid机制" class="anchor" href="#2-%E8%8E%B7%E5%8F%96%E7%94%A8%E6%88%B7%E4%BF%A1%E6%81%AF%E7%94%A8%E6%88%B7uid%E6%9C%BA%E5%88%B6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2， 获取用户信息（用户uid机制）</h2>
       </section>
       <footer>
         <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
