Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -367,13 +367,34 @@
 <p><code>http://youbanapihost/openapi/token/get?appId=APPID&amp;appSecret=APPSECRET</code></p>
 
 <ul>
-<li><p>参数说明：
-参数 | 是否必须 | 描述
------------- | ------------- | -------------
-appId | 是 | 应用注册成功后返回
-appSecret | 是 | 应用注册成功后返回</p></li>
-<li><p>返回说明：
-正常情况下优办开放平台会返回下述JSON数据包给用户</p></li>
+<li>参数说明：</li>
+</ul>
+
+<table>
+<thead>
+<tr>
+<th>参数</th>
+<th>是否必须</th>
+<th>描述</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>appId</td>
+<td>是</td>
+<td>应用注册成功后返回</td>
+</tr>
+<tr>
+<td>appSecret</td>
+<td>是</td>
+<td>应用注册成功后返回</td>
+</tr>
+</tbody>
+</table>
+
+<ul>
+<li>返回说明：
+正常情况下优办开放平台会返回下述JSON数据包给用户</li>
 </ul>
 
 <pre><code>
