--- a/index.html
+++ b/index.html
@@ -18,13 +18,6 @@
       <header>
         <h1 class="header">优办开放平台开发者文档</h1>
         <p class="header"></p>
-
-
-
-        <ul>
-          <li><a class="buttons github" href="https://github.com/uban360">GitHub Profile</a></li>
-        </ul>
-
       </header>
       <section>
         <h1>
@@ -454,7 +447,7 @@
 <a id="2-获取用户信息用户uid机制" class="anchor" href="#2-%E8%8E%B7%E5%8F%96%E7%94%A8%E6%88%B7%E4%BF%A1%E6%81%AF%E7%94%A8%E6%88%B7uid%E6%9C%BA%E5%88%B6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2， 获取用户信息（用户uid机制）</h2>
       </section>
       <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <p><small>Hosted on <a href="http://uban360.com/">杭州讯盟科技有限公司</a> using the Dinky theme</small></p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
