--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
       <header>
         <h1 class="header">优办开放平台开发者文档</h1>
         <p class="header"></p>
+
+
+
+        <ul>
+          <li><a class="buttons github" href="https://github.com/uban360">GitHub Profile</a></li>
+        </ul>
+
       </header>
       <section>
         <h1>
@@ -227,7 +234,7 @@
 
 <ul>
 <li>1.1 提交服务器配置
-由于目前开发者后台还在公测中，还未对正式开发者开放，所有需要开发者把以下信息通过以下格式，以邮件（<em><a href="mailto:luohj@shinemo.com">luohj@shinemo.com</a></em>）发送给优办后台超级管理员，暂时由超级管理员负责录入,录入成功后会返回应用的** appId和appSecret** 。</li>
+由于目前开发者后台还在公测中，还未对正式开发者开放，所有需要开发者把以下信息通过以下格式，以邮件（<em><a href="mailto:luohj@shinemo.com">luohj@shinemo.com</a></em>）发送给优办后台超级管理员，暂时由超级管理员负责录入,录入成功后会返回应用的<strong>appId和appSecret</strong> 。</li>
 </ul>
 </blockquote>
 
@@ -351,7 +358,7 @@
 使用AppID和AppSecret调用本接口来获取accessToken。AppID和AppSecret可在邮件回复中获得（需要提供上述的开发者信息邮件给超级管理员，且帐号没有异常状态）</li>
 </ul>
 
-<p>** 接口调用请求说明 **</p>
+<p><strong>接口调用请求说明</strong></p>
 
 <ul>
 <li>http请求方式: GET</li>
@@ -443,11 +450,177 @@
 <h2>
 <a id="1-获取用户信息优办登录token机制" class="anchor" href="#1-%E8%8E%B7%E5%8F%96%E7%94%A8%E6%88%B7%E4%BF%A1%E6%81%AF%E4%BC%98%E5%8A%9E%E7%99%BB%E5%BD%95token%E6%9C%BA%E5%88%B6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>1， 获取用户信息（优办登录token机制）</h2>
 
+<ul>
+<li>http请求方式: GET</li>
+</ul>
+
+<p><code>http://youbanapihost/openapi/auth/getUserInfoByToken?token=TOKEN&amp;accessToken=ACCESSTOKEN</code></p>
+
+<ul>
+<li>参数说明：</li>
+</ul>
+
+<table>
+<thead>
+<tr>
+<th>参数</th>
+<th>是否必须</th>
+<th>描述</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>token</td>
+<td>是</td>
+<td>优办客户端拼接上的token</td>
+</tr>
+<tr>
+<td>accessToken</td>
+<td>是</td>
+<td>接口访问凭据</td>
+</tr>
+</tbody>
+</table>
+
+<ul>
+<li>返回说明：
+正常情况下优办开放平台会返回下述JSON数据包给用户</li>
+</ul>
+
+<pre><code>
+{"status":0,"data":{"uid":"REAM123","name":"张三", "orgList":[{"orgName":"杭州讯盟科技",orgId:1}, {"orgName":"芒果医生",orgId:2}, {"orgName":"阿里巴巴",orgId:3}...]}}
+
+</code></pre>
+
+<table>
+<thead>
+<tr>
+<th>参数</th>
+<th>描述</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>status</td>
+<td>开放平台处理状态</td>
+</tr>
+<tr>
+<td>data</td>
+<td>处理成功后会把数据字段放到这里</td>
+</tr>
+<tr>
+<td>uid</td>
+<td>用户在开放平台的id（经过加密），后续获取用户信息需要通过此uid</td>
+</tr>
+<tr>
+<td>orgList</td>
+<td>用户所在机构列表</td>
+</tr>
+<tr>
+<td>orgName</td>
+<td>用户所在机构名字</td>
+</tr>
+<tr>
+<td>orgId</td>
+<td>用户所在机构id</td>
+</tr>
+</tbody>
+</table>
+
+<p>错误时开放平台会返回错误码等信息，JSON数据包示例如下（该示例为accessToken超时）</p>
+
+<pre><code>{"status":4003,"message":"accessToken超时，请重新获取"}
+
+</code></pre>
+
 <h2>
 <a id="2-获取用户信息用户uid机制" class="anchor" href="#2-%E8%8E%B7%E5%8F%96%E7%94%A8%E6%88%B7%E4%BF%A1%E6%81%AF%E7%94%A8%E6%88%B7uid%E6%9C%BA%E5%88%B6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2， 获取用户信息（用户uid机制）</h2>
+
+<ul>
+<li>http请求方式: GET</li>
+</ul>
+
+<p><code>http://youbanapihost/openapi/user/getUserInfoById?uid=UID&amp;accessToken=ACCESSTOKEN</code></p>
+
+<ul>
+<li>参数说明：</li>
+</ul>
+
+<table>
+<thead>
+<tr>
+<th>参数</th>
+<th>是否必须</th>
+<th>描述</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>uid</td>
+<td>是</td>
+<td>用户uid</td>
+</tr>
+<tr>
+<td>accessToken</td>
+<td>是</td>
+<td>接口访问凭据</td>
+</tr>
+</tbody>
+</table>
+
+<ul>
+<li>返回说明：
+正常情况下优办开放平台会返回下述JSON数据包给用户</li>
+</ul>
+
+<pre><code>
+{"status":0,"data":{"uid":"REAM123","name":"张三", "orgList":[{"orgName":"杭州讯盟科技",orgId:1}, {"orgName":"芒果医生",orgId:2}, {"orgName":"阿里巴巴",orgId:3}...]}}
+
+</code></pre>
+
+<table>
+<thead>
+<tr>
+<th>参数</th>
+<th>描述</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>status</td>
+<td>开放平台处理状态</td>
+</tr>
+<tr>
+<td>data</td>
+<td>处理成功后会把数据字段放到这里</td>
+</tr>
+<tr>
+<td>uid</td>
+<td>用户在开放平台的id（经过加密），后续获取用户信息需要通过此uid</td>
+</tr>
+<tr>
+<td>orgList</td>
+<td>用户所在机构列表</td>
+</tr>
+<tr>
+<td>orgName</td>
+<td>用户所在机构名字</td>
+</tr>
+<tr>
+<td>orgId</td>
+<td>用户所在机构id</td>
+</tr>
+</tbody>
+</table>
+
+<p>错误时开放平台会返回错误码等信息，JSON数据包示例如下（该示例为accessToken超时）</p>
+
+<pre><code>{"status":4003,"message":"accessToken超时，请重新获取"}
+
+</code></pre>
       </section>
       <footer>
-        <p><small>Hosted on <a href="http://uban360.com/">杭州讯盟科技有限公司</a> using the Dinky theme</small></p>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
