--- a/index.html
+++ b/index.html
@@ -19,12 +19,6 @@
         <h1 class="header">优办开放平台开发者文档</h1>
         <p class="header"></p>
 
-
-
-        <ul>
-          <li><a class="buttons github" href="https://github.com/uban360">GitHub Profile</a></li>
-        </ul>
-
       </header>
       <section>
         <h1>
@@ -620,7 +614,7 @@
 </code></pre>
       </section>
       <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <p><small>Hosted on <a href="https://ub360.com">杭州讯盟科技有限公司</a> using the Dinky theme</small></p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
