--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <a id="1-更新日志" class="anchor" href="#1-%E6%9B%B4%E6%96%B0%E6%97%A5%E5%BF%97" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>1， 更新日志</h2>
 
 <ul>
-<li>2016年4月15日  优办开放平台上线，提供获取当前登录用户信息接口，和管理员后台</li>
+<li>2016年4月15日  集团彩云开放平台上线，提供获取当前登录用户信息接口，和管理员后台</li>
 </ul>
 
 <h2>
@@ -39,7 +39,7 @@
 
 <ul>
 <li>您收集用户的数据后，必须采取必要的保护措施，防止用户数据被盗、泄漏等。</li>
-<li>如果优办认为您收集、使用用户数据的方式，可能损害用户体验，优办有权要求您删除相关数据并不得再以该方式收集、使用用户数据。</li>
+<li>如果集团彩云认为您收集、使用用户数据的方式，可能损害用户体验，集团彩云有权要求您删除相关数据并不得再以该方式收集、使用用户数据。</li>
 <li>一旦您停止使用本服务，或优办基于任何原因终止您使用本服务，您必须立即删除全部因使用本服务而获得的数据（包括各种备份）， 且不得再以任何方式进行使用。</li>
 </ul>
 
@@ -53,7 +53,7 @@
 <tr>
 <th>接口名称</th>
 <th>未认证开放平台账号</th>
-<th>优办认证开放平台账号</th>
+<th>集团彩云认证开放平台账号</th>
 </tr>
 </thead>
 <tbody>
