--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
 </code></pre>
       </section>
       <footer>
-        <p><small>Hosted on <a href="https://ub360.com">杭州讯盟科技有限公司</a> using the Dinky theme</small></p>
+        <p><small>Hosted on <a href="http://uban360.com">杭州讯盟科技有限公司</a> using the Dinky theme</small></p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
