--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 <ul>
 <li>2016年4月15日  开放平台上线，提供获取当前登录用户信息接口，和管理员后台</li>
+<li>2016年4月20日  提供接口权限验证，不同接口享有不同权限</li>
 </ul>
 
 <h2>
@@ -64,6 +65,36 @@
 </tr>
 <tr>
 <td>获取用户基本信息</td>
+<td>无</td>
+<td>有</td>
+</tr>
+<tr>
+<td>获取部门列表</td>
+<td>无</td>
+<td>有</td>
+</tr>
+<tr>
+<td>获取部门详情</td>
+<td>无</td>
+<td>有</td>
+</tr>
+<tr>
+<td>获取部门员工列表</td>
+<td>无</td>
+<td>有</td>
+</tr>
+<tr>
+<td>获取部门员工详情</td>
+<td>无</td>
+<td>有</td>
+</tr>
+<tr>
+<td>发送聊天消息</td>
+<td>无</td>
+<td>有</td>
+</tr>
+<tr>
+<td>发送优小助消息</td>
 <td>无</td>
 <td>有</td>
 </tr>
