Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -486,9 +486,16 @@
 
 <ul>
 <li>3.1 测试号申请暂时通过跟正式应用申请相同方式，邮件给指定人申请，后续会陆续开放后台自助申请。</li>
-<li>3.2 测试号申请完毕后，需要加入该测试号的测试人，加入方式同上。
-## 4， 接口在线调试
-## 5， 常见问题</li>
+<li>3.2 测试号申请完毕后，需要加入该测试号的测试人，加入方式同上。</li>
+</ul>
+
+<h2>
+<a id="4-接口在线调试" class="anchor" href="#4-%E6%8E%A5%E5%8F%A3%E5%9C%A8%E7%BA%BF%E8%B0%83%E8%AF%95" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>4， 接口在线调试</h2>
+
+<h2>
+<a id="5-常见问题" class="anchor" href="#5-%E5%B8%B8%E8%A7%81%E9%97%AE%E9%A2%98" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>5， 常见问题</h2>
+
+<ul>
 <li>5.1 accessToken失效：请检查accessToken全局唯一性，重复获取将导致上一次获取的accessToken失效；</li>
 </ul>
 
