Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>优办开放平台开发者文档 by uban360</title>
+    <title>开发者文档 by uban360</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">优办开放平台开发者文档</h1>
+        <h1 class="header">开发者文档</h1>
         <p class="header"></p>
 
 
@@ -406,7 +406,8 @@
 <li>https请求方式: GET</li>
 </ul>
 
-<p><code>https://api.open.jituancaiyun.com/openapi/token/get?appId=APPID&amp;appSecret=APPSECRET</code></p>
+<pre><code>https://api.open.jituancaiyun.com/openapi/token/get?appId=APPID&amp;appSecret=APPSECRET
+</code></pre>
 
 <ul>
 <li>参数说明：</li>
@@ -503,13 +504,19 @@
 <a id="三----服务端开发文档" class="anchor" href="#%E4%B8%89----%E6%9C%8D%E5%8A%A1%E7%AB%AF%E5%BC%80%E5%8F%91%E6%96%87%E6%A1%A3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>三，    服务端开发文档</h1>
 
 <h2>
-<a id="1-获取用户信息登录token机制" class="anchor" href="#1-%E8%8E%B7%E5%8F%96%E7%94%A8%E6%88%B7%E4%BF%A1%E6%81%AF%E7%99%BB%E5%BD%95token%E6%9C%BA%E5%88%B6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>1， 获取用户信息（登录token机制）</h2>
+<a id="1-免登授权" class="anchor" href="#1-%E5%85%8D%E7%99%BB%E6%8E%88%E6%9D%83" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>1， 免登授权</h2>
+
+<blockquote>
+<p>开发者需要通过此接口做免登</p>
+</blockquote>
 
 <ul>
 <li>https请求方式: GET</li>
 </ul>
 
-<p><code>https://api.open.jituancaiyun.com/openapi/auth/getUserInfoByToken?token=TOKEN&amp;accessToken=ACCESSTOKEN</code></p>
+<pre><code>https://api.open.jituancaiyun.com/openapi/auth/getUserInfoByToken?token=TOKEN&amp;accessToken=ACCESSTOKEN
+
+</code></pre>
 
 <ul>
 <li>参数说明：</li>
@@ -589,99 +596,21 @@
 </code></pre>
 
 <h2>
-<a id="2-获取用户信息用户uid机制" class="anchor" href="#2-%E8%8E%B7%E5%8F%96%E7%94%A8%E6%88%B7%E4%BF%A1%E6%81%AF%E7%94%A8%E6%88%B7uid%E6%9C%BA%E5%88%B6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2， 获取用户信息（用户uid机制）</h2>
+<a id="2-管理通讯录" class="anchor" href="#2-%E7%AE%A1%E7%90%86%E9%80%9A%E8%AE%AF%E5%BD%95" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2， 管理通讯录</h2>
+
+<blockquote>
+<p>开发者可以通过通讯录管理接口，将整个企业组织架构导入到系统；并且可以做修改和查看；</p>
+</blockquote>
+
+<h3>
+<a id="21-获取部门列表" class="anchor" href="#21-%E8%8E%B7%E5%8F%96%E9%83%A8%E9%97%A8%E5%88%97%E8%A1%A8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2.1 获取部门列表</h3>
 
 <ul>
 <li>https请求方式: GET</li>
 </ul>
 
-<p><code>https://api.open.jituancaiyun.com/openapi/user/getUserInfoById?uid=UID&amp;accessToken=ACCESSTOKEN</code></p>
-
-<ul>
-<li>参数说明：</li>
-</ul>
-
-<table>
-<thead>
-<tr>
-<th>参数</th>
-<th>是否必须</th>
-<th>描述</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>uid</td>
-<td>是</td>
-<td>用户uid</td>
-</tr>
-<tr>
-<td>accessToken</td>
-<td>是</td>
-<td>接口访问凭据</td>
-</tr>
-</tbody>
-</table>
-
-<ul>
-<li>返回说明：
-正常情况下开放平台会返回下述JSON数据包给用户</li>
-</ul>
-
-<pre><code>
-{"status":0,"data":{"uid":"REAM123","name":"张三", "orgList":[{"orgName":"杭州讯盟科技",orgId:1}, {"orgName":"芒果医生",orgId:2}, {"orgName":"阿里巴巴",orgId:3}...]}}
-
+<pre><code> https://api.open.jituancaiyun.com/openapi/department/list?accessToken=ACCESSTOKEN
 </code></pre>
-
-<table>
-<thead>
-<tr>
-<th>参数</th>
-<th>描述</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>status</td>
-<td>开放平台处理状态</td>
-</tr>
-<tr>
-<td>data</td>
-<td>处理成功后会把数据字段放到这里</td>
-</tr>
-<tr>
-<td>uid</td>
-<td>用户在开放平台的id（经过加密），后续获取用户信息需要通过此uid</td>
-</tr>
-<tr>
-<td>orgList</td>
-<td>用户所在机构列表</td>
-</tr>
-<tr>
-<td>orgName</td>
-<td>用户所在机构名字</td>
-</tr>
-<tr>
-<td>orgId</td>
-<td>用户所在机构id</td>
-</tr>
-</tbody>
-</table>
-
-<p>错误时开放平台会返回错误码等信息，JSON数据包示例如下（该示例为accessToken超时）</p>
-
-<pre><code>{"status":4003,"message":"accessToken超时，请重新获取"}
-
-</code></pre>
-
-<h2>
-<a id="3-获取部门列表" class="anchor" href="#3-%E8%8E%B7%E5%8F%96%E9%83%A8%E9%97%A8%E5%88%97%E8%A1%A8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>3， 获取部门列表</h2>
-
-<ul>
-<li>https请求方式: GET</li>
-</ul>
-
-<p><code>https://api.open.jituancaiyun.com/openapi/department/list?accessToken=ACCESSTOKEN</code></p>
 
 <ul>
 <li>参数说明：</li>
@@ -744,7 +673,7 @@
 </tr>
 <tr>
 <td>parentid</td>
-<td>父部门id</td>
+<td>父部门id(根部门为0)</td>
 </tr>
 </tbody>
 </table>
@@ -755,14 +684,266 @@
 
 </code></pre>
 
-<h2>
-<a id="4-获取部门成员列表" class="anchor" href="#4-%E8%8E%B7%E5%8F%96%E9%83%A8%E9%97%A8%E6%88%90%E5%91%98%E5%88%97%E8%A1%A8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>4， 获取部门成员列表</h2>
+<h3>
+<a id="22-创建部门" class="anchor" href="#22-%E5%88%9B%E5%BB%BA%E9%83%A8%E9%97%A8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2.2 创建部门</h3>
+
+<ul>
+<li>https请求方式: POST</li>
+</ul>
+
+<pre><code> https://api.open.jituancaiyun.com/openapi/department/create?accessToken=ACCESSTOKEN
+</code></pre>
+
+<ul>
+<li>POST消息体</li>
+</ul>
+
+<pre><code>{"name":"芒果医生", "parentId":"0", "order":"1"}
+</code></pre>
+
+<ul>
+<li>参数说明：</li>
+</ul>
+
+<table>
+<thead>
+<tr>
+<th>参数</th>
+<th>是否必须</th>
+<th>描述</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>accessToken</td>
+<td>是</td>
+<td>接口访问凭据</td>
+</tr>
+<tr>
+<td>name</td>
+<td>是</td>
+<td>部门名称(长度限制为1~64个字符)</td>
+</tr>
+<tr>
+<td>parentId</td>
+<td>是</td>
+<td>父部门id(根部门为0)</td>
+</tr>
+<tr>
+<td>order</td>
+<td>是</td>
+<td>在父部门中的次序值。order值小的排序靠前</td>
+</tr>
+</tbody>
+</table>
+
+<ul>
+<li>返回说明：
+正常情况下开放平台会返回下述JSON数据包给用户</li>
+</ul>
+
+<pre><code>
+{"status":0,"data":{"id":"230332"}}
+
+</code></pre>
+
+<table>
+<thead>
+<tr>
+<th>参数</th>
+<th>描述</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>status</td>
+<td>开放平台处理状态</td>
+</tr>
+<tr>
+<td>data</td>
+<td>处理成功后会把数据字段放到这里</td>
+</tr>
+<tr>
+<td>id</td>
+<td>部门id</td>
+</tr>
+</tbody>
+</table>
+
+<p>错误时开放平台会返回错误码等信息，JSON数据包示例如下（该示例为accessToken超时）</p>
+
+<pre><code>{"status":4003,"message":"accessToken超时，请重新获取"}
+
+</code></pre>
+
+<h3>
+<a id="23-更新部门" class="anchor" href="#23-%E6%9B%B4%E6%96%B0%E9%83%A8%E9%97%A8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2.3 更新部门</h3>
+
+<ul>
+<li>https请求方式: POST</li>
+</ul>
+
+<pre><code> https://api.open.jituancaiyun.com/openapi/department/update?accessToken=ACCESSTOKEN
+</code></pre>
+
+<ul>
+<li>POST消息体</li>
+</ul>
+
+<pre><code>{"name":"芒果医生", "parentId":"0", "order":"1", "id":"23004"}
+</code></pre>
+
+<ul>
+<li>参数说明：</li>
+</ul>
+
+<table>
+<thead>
+<tr>
+<th>参数</th>
+<th>是否必须</th>
+<th>描述</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>accessToken</td>
+<td>是</td>
+<td>接口访问凭据</td>
+</tr>
+<tr>
+<td>name</td>
+<td>否</td>
+<td>部门名称(长度限制为1~64个字符)</td>
+</tr>
+<tr>
+<td>parentId</td>
+<td>否</td>
+<td>父部门id(根部门为0)</td>
+</tr>
+<tr>
+<td>order</td>
+<td>否</td>
+<td>在父部门中的次序值。order值小的排序靠前</td>
+</tr>
+<tr>
+<td>id</td>
+<td>是</td>
+<td>部门id</td>
+</tr>
+</tbody>
+</table>
+
+<ul>
+<li>返回说明：
+正常情况下开放平台会返回下述JSON数据包给用户</li>
+</ul>
+
+<pre><code>
+{"status":0}
+
+</code></pre>
+
+<table>
+<thead>
+<tr>
+<th>参数</th>
+<th>描述</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>status</td>
+<td>开放平台处理状态</td>
+</tr>
+</tbody>
+</table>
+
+<p>错误时开放平台会返回错误码等信息，JSON数据包示例如下（该示例为accessToken超时）</p>
+
+<pre><code>{"status":4003,"message":"accessToken超时，请重新获取"}
+
+</code></pre>
+
+<h3>
+<a id="24-删除部门" class="anchor" href="#24-%E5%88%A0%E9%99%A4%E9%83%A8%E9%97%A8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2.4 删除部门</h3>
+
+<ul>
+<li>https请求方式: POST</li>
+</ul>
+
+<pre><code> https://api.open.jituancaiyun.com/openapi/department/delete?accessToken=ACCESSTOKEN
+</code></pre>
+
+<ul>
+<li>POST消息体</li>
+</ul>
+
+<pre><code>{"id":"23004"}
+</code></pre>
+
+<ul>
+<li>参数说明：</li>
+</ul>
+
+<table>
+<thead>
+<tr>
+<th>参数</th>
+<th>是否必须</th>
+<th>描述</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>id</td>
+<td>是</td>
+<td>部门id</td>
+</tr>
+</tbody>
+</table>
+
+<ul>
+<li>返回说明：
+正常情况下开放平台会返回下述JSON数据包给用户</li>
+</ul>
+
+<pre><code>
+{"status":0}
+
+</code></pre>
+
+<table>
+<thead>
+<tr>
+<th>参数</th>
+<th>描述</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>status</td>
+<td>开放平台处理状态</td>
+</tr>
+</tbody>
+</table>
+
+<p>错误时开放平台会返回错误码等信息，JSON数据包示例如下（该示例为accessToken超时）</p>
+
+<pre><code>{"status":4003,"message":"accessToken超时，请重新获取"}
+
+</code></pre>
+
+<h3>
+<a id="25-获取部门下所有人员" class="anchor" href="#25-%E8%8E%B7%E5%8F%96%E9%83%A8%E9%97%A8%E4%B8%8B%E6%89%80%E6%9C%89%E4%BA%BA%E5%91%98" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2.5 获取部门下所有人员</h3>
 
 <ul>
 <li>https请求方式: GET</li>
 </ul>
 
-<p><code>https://api.open.jituancaiyun.com/openapi/user/list?accessToken=ACCESSTOKEN&amp;deptId=DEPTID&amp;offset=0&amp;size=100</code></p>
+<pre><code>https://api.open.jituancaiyun.com/openapi/user/list?accessToken=ACCESSTOKEN&amp;deptId=DEPTID&amp;offset=0&amp;size=100
+
+</code></pre>
 
 <ul>
 <li>参数说明：</li>
@@ -810,8 +991,12 @@
 正常情况下开放平台会返回下述JSON数据包给用户</li>
 </ul>
 
-<pre><code>
-{"status":0,"data":{"hasMore":true, "users":[{"uid":123, "name":"张三"},{"uid":124, "name":"李四"},...]}}
+<pre><code>{"status":0,"data":{
+"hasMore":true, 
+"users":
+[{"uid":123, "name":"张三", "mobile":"18268080277"},
+{"uid":124, "name":"李四", "mobile":"18268080277"},
+...]}}
 
 </code></pre>
 
@@ -843,6 +1028,10 @@
 <td>name</td>
 <td>用户名字</td>
 </tr>
+<tr>
+<td>mobile</td>
+<td>手机号</td>
+</tr>
 </tbody>
 </table>
 
@@ -852,14 +1041,36 @@
 
 </code></pre>
 
-<h2>
-<a id="5-获取成员详情" class="anchor" href="#5-%E8%8E%B7%E5%8F%96%E6%88%90%E5%91%98%E8%AF%A6%E6%83%85" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>5， 获取成员详情</h2>
+<h3>
+<a id="26-导入部门成员全量接口或者更新" class="anchor" href="#26-%E5%AF%BC%E5%85%A5%E9%83%A8%E9%97%A8%E6%88%90%E5%91%98%E5%85%A8%E9%87%8F%E6%8E%A5%E5%8F%A3%E6%88%96%E8%80%85%E6%9B%B4%E6%96%B0" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2.6 导入部门成员(全量接口)（或者更新）</h3>
 
 <ul>
-<li>https请求方式: GET</li>
+<li>https请求方式: POST</li>
 </ul>
 
-<p><code>https://api.open.jituancaiyun.com/openapi/user/detail?accessToken=ACCESSTOKEN&amp;uid=UID</code></p>
+<pre><code> https://api.open.jituancaiyun.com/openapi/user/import?accessToken=ACCESSTOKEN
+</code></pre>
+
+<ul>
+<li>POST消息体</li>
+</ul>
+
+<pre><code>[
+{
+    "deptId": ["1", "2"],
+    "uid":"",
+    "mobile":"18806886888",
+    "name":"旻浩"
+},
+{
+    "deptId": ["0", "5"],
+    "uid":"12",
+    "mobile":"18806886887",
+    "name":"旻浩1"
+},
+...
+]
+</code></pre>
 
 <ul>
 <li>参数说明：</li>
@@ -880,9 +1091,24 @@
 <td>接口访问凭据</td>
 </tr>
 <tr>
+<td>name</td>
+<td>是</td>
+<td>成员名字(长度限制为1~64个字符)</td>
+</tr>
+<tr>
+<td>deptId</td>
+<td>是</td>
+<td>数组类型，数组里面值为字符串，成员所属部门id列表</td>
+</tr>
+<tr>
+<td>mobile</td>
+<td>是</td>
+<td>手机号码。企业内必须唯一</td>
+</tr>
+<tr>
 <td>uid</td>
 <td>是</td>
-<td>用户id</td>
+<td>为空则新增，非空则更新</td>
 </tr>
 </tbody>
 </table>
@@ -893,7 +1119,7 @@
 </ul>
 
 <pre><code>
-{"status":0,"data":{"avatar":"https://", "name":"张三", "deptId":1}}
+{"status":0,"data":{"id":"230332"}}
 
 </code></pre>
 
@@ -909,22 +1135,6 @@
 <td>status</td>
 <td>开放平台处理状态</td>
 </tr>
-<tr>
-<td>data</td>
-<td>处理成功后会把数据字段放到这里</td>
-</tr>
-<tr>
-<td>avatar</td>
-<td>头像</td>
-</tr>
-<tr>
-<td>deptId</td>
-<td>所属部门id</td>
-</tr>
-<tr>
-<td>name</td>
-<td>用户名字</td>
-</tr>
 </tbody>
 </table>
 
@@ -935,13 +1145,16 @@
 </code></pre>
 
 <h2>
-<a id="6-发送聊天消息" class="anchor" href="#6-%E5%8F%91%E9%80%81%E8%81%8A%E5%A4%A9%E6%B6%88%E6%81%AF" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>6， 发送聊天消息</h2>
+<a id="3-发送聊天消息" class="anchor" href="#3-%E5%8F%91%E9%80%81%E8%81%8A%E5%A4%A9%E6%B6%88%E6%81%AF" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>3， 发送聊天消息</h2>
 
 <ul>
 <li>https请求方式: POST</li>
 </ul>
 
-<p><code>https://api.open.jituancaiyun.com/openapi/message/chat/push</code></p>
+<pre><code>
+ https://api.open.jituancaiyun.com/openapi/message/chat/push
+
+</code></pre>
 
 <ul>
 <li>参数说明：</li>
@@ -1085,13 +1298,15 @@
 </tbody>
 </table>
 
-<pre><code>{
+<pre><code>
+{
     "msgType": "voice",
     "voice": {
        "mediaId": "MEDIA_ID",
        "duration": "10"
     }
 }
+
 
 </code></pre>
 
@@ -1182,13 +1397,19 @@
 </code></pre>
 
 <h2>
-<a id="7-上传媒体文件" class="anchor" href="#7-%E4%B8%8A%E4%BC%A0%E5%AA%92%E4%BD%93%E6%96%87%E4%BB%B6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>7， 上传媒体文件</h2>
+<a id="4-媒体文件管理" class="anchor" href="#4-%E5%AA%92%E4%BD%93%E6%96%87%E4%BB%B6%E7%AE%A1%E7%90%86" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>4， 媒体文件管理</h2>
+
+<h3>
+<a id="41-上传媒体文件" class="anchor" href="#41-%E4%B8%8A%E4%BC%A0%E5%AA%92%E4%BD%93%E6%96%87%E4%BB%B6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>4.1 上传媒体文件</h3>
 
 <ul>
 <li>https请求方式: POST</li>
 </ul>
 
-<p><code>https://api.open.jituancaiyun.com/openapi/media/upload</code></p>
+<pre><code>
+https://api.open.jituancaiyun.com/openapi/media/upload
+
+</code></pre>
 
 <ul>
 <li>参数说明：</li>
@@ -1270,14 +1491,16 @@
 
 </code></pre>
 
-<h2>
-<a id="8-获取媒体文件" class="anchor" href="#8-%E8%8E%B7%E5%8F%96%E5%AA%92%E4%BD%93%E6%96%87%E4%BB%B6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>8， 获取媒体文件</h2>
+<h3>
+<a id="42--获取媒体文件" class="anchor" href="#42--%E8%8E%B7%E5%8F%96%E5%AA%92%E4%BD%93%E6%96%87%E4%BB%B6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>4.2，  获取媒体文件</h3>
 
 <ul>
 <li>https请求方式: GET</li>
 </ul>
 
-<p><code>https://api.open.jituancaiyun.com/openapi/media/get?accessToken=ACCESSTOKEN&amp;mediaId=MEDIAID</code></p>
+<pre><code> https://api.open.jituancaiyun.com/openapi/media/get?accessToken=ACCESSTOKEN&amp;mediaId=MEDIAID
+
+</code></pre>
 
 <ul>
 <li>参数说明：</li>
@@ -1311,7 +1534,7 @@
 </ul>
 
 <h2>
-<a id="9-通讯录事件回调" class="anchor" href="#9-%E9%80%9A%E8%AE%AF%E5%BD%95%E4%BA%8B%E4%BB%B6%E5%9B%9E%E8%B0%83" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>9， 通讯录事件回调</h2>
+<a id="5-通讯录事件回调" class="anchor" href="#5-%E9%80%9A%E8%AE%AF%E5%BD%95%E4%BA%8B%E4%BB%B6%E5%9B%9E%E8%B0%83" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>5， 通讯录事件回调</h2>
 
 <p>开放平台会向回调url推送事件变更，假设您提供的回调URL是:</p>
 
