Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <td>有</td>
 </tr>
 <tr>
-<td>获取用户基本信息</td>
+<td>免登授权</td>
 <td>无</td>
 <td>有</td>
 </tr>
@@ -85,17 +85,42 @@
 <td>有</td>
 </tr>
 <tr>
-<td>获取部门员工列表</td>
+<td>创建部门</td>
 <td>无</td>
 <td>有</td>
 </tr>
 <tr>
-<td>获取部门员工详情</td>
+<td>更新部门</td>
+<td>无</td>
+<td>有</td>
+</tr>
+<tr>
+<td>删除部门</td>
+<td>无</td>
+<td>有</td>
+</tr>
+<tr>
+<td>获取部门下所有人员</td>
+<td>无</td>
+<td>有</td>
+</tr>
+<tr>
+<td>导入部门成员</td>
 <td>无</td>
 <td>有</td>
 </tr>
 <tr>
 <td>发送聊天消息</td>
+<td>无</td>
+<td>有</td>
+</tr>
+<tr>
+<td>上传媒体文件</td>
+<td>无</td>
+<td>有</td>
+</tr>
+<tr>
+<td>获取媒体文件</td>
 <td>无</td>
 <td>有</td>
 </tr>
@@ -136,7 +161,7 @@
 <td>2000</td>
 </tr>
 <tr>
-<td>获取用户基本信息</td>
+<td>免登授权</td>
 <td>5000</td>
 </tr>
 <tr>
@@ -144,15 +169,35 @@
 <td>5000</td>
 </tr>
 <tr>
-<td>获取部门员工列表</td>
+<td>创建部门</td>
 <td>5000</td>
 </tr>
 <tr>
-<td>获取部门员工详情</td>
+<td>更新部门</td>
 <td>5000</td>
+</tr>
+<tr>
+<td>删除部门</td>
+<td>5000</td>
+</tr>
+<tr>
+<td>获取部门下所有人员</td>
+<td>5000</td>
+</tr>
+<tr>
+<td>导入部门成员</td>
+<td>20</td>
 </tr>
 <tr>
 <td>发送聊天消息</td>
+<td>5000</td>
+</tr>
+<tr>
+<td>上传媒体文件</td>
+<td>5000</td>
+</tr>
+<tr>
+<td>获取媒体文件</td>
 <td>5000</td>
 </tr>
 <tr>
