--- a/index.html
+++ b/index.html
@@ -19,10 +19,35 @@
         <h1 class="header">开发者文档</h1>
         <p class="header"></p>
 
-
-
         <ul>
-          <li><a class="buttons github" href="https://github.com/uban360">GitHub Profile</a></li>
+          <li><a href="#一----开始前必读">一， 开始前必读</a>
+              <ul>
+                  <li><a href="#1-更新日志">1， 更新日志</a></li>
+                  <li><a href="#2-开发者规范">2， 开发者规范</a></li>
+                  <li><a href="#3-开放平台接口权限说明">3， 开放平台接口权限说明</a></li>
+                  <li><a href="#4-开放平台接口调用频率说明">4， 开放平台接口调用频率说明</a></li>
+                  <li><a href="#5-开放平台接口返回说明">5， 开放平台接口返回说明</a></li>
+              </ul>
+          </li>
+          <li><a href="#二----开始开发">二， 开始开发</a>
+            <ul>
+                  <li><a href="#1-接入指南">1， 接入指南</a></li>
+                  <li><a href="#2-获取接口调用凭据accesstoken">2， 获取接口调用凭据（accessToken）</a></li>
+                  <li><a href="#3-测试号申请">3， 测试号申请</a></li>
+                  <li><a href="#4-接口在线调试">4， 接口在线调试</a></li>
+                  <li><a href="#5-常见问题">5， 常见问题</a></li>
+              </ul>
+          </li>
+          <li><a href="#三----服务端开发文档">三， 服务端开发文档</a>
+            <ul>
+                  <li><a href="#1-免登授权">1， 免登授权</a></li>
+                  <li><a href="#2-管理通讯录">2， 管理通讯录</a></li>
+                  <li><a href="#3-发送聊天消息">3， 发送聊天消息</a></li>
+                  <li><a href="#4-媒体文件管理">4， 媒体文件管理</a></li>
+                  <li><a href="#5-通讯录事件回调">5， 通讯录事件回调</a></li>
+              </ul>
+            </li>
+          <li><a href="#四----开发demo">四， 开发demo</a></li>
         </ul>
 
       </header>
@@ -1689,9 +1714,6 @@ https://api.open.jituancaiyun.com/openapi/media/upload
 
 <p><a href="http://https://github.com/jituancaiyun/openapi-demo">Java SDK Github DEMO</a></p>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-      </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
 		
