--- a/index.html
+++ b/index.html
@@ -1064,8 +1064,8 @@
 <pre><code>{"status":0,"data":{
 "hasMore":true, 
 "users":
-[{"uid":123, "name":"张三", "mobile":"18268080277", "position":"我的职位"},
-{"uid":124, "name":"李四", "mobile":"18268080277", "position":"我的职位"},
+[{"uid":123, "name":"张三", "mobile":"18268080277", "title":"我的职位"},
+{"uid":124, "name":"李四", "mobile":"18268080277", "title":"我的职位"},
 ...]}}
 
 </code></pre>
@@ -1103,7 +1103,7 @@
 <td>手机号</td>
 </tr>
 <tr>
-<td>position</td>
+<td>title</td>
 <td>职位</td>
 </tr>
 </tbody>
@@ -1134,14 +1134,14 @@
     "deptId": ["1", "2"],
     "uid":"",
     "mobile":"18806886888",
-    "position":"销售主管",
+    "title":"销售主管",
     "name":"旻浩"
 },
 {
     "deptId": ["0", "5"],
     "uid":"12",
     "mobile":"18806886887",
-    "position":"销售小弟",
+    "title":"销售小弟",
     "name":"旻浩1"
 },
 ...
@@ -1187,7 +1187,7 @@
 <td>用户唯一id，为空则新增，非空则更新</td>
 </tr>
 <tr>
-<td>position</td>
+<td>title</td>
 <td>是</td>
 <td>人员职务(长度限制为1~64个字符)</td>
 </tr>
