--- a/index.html
+++ b/index.html
@@ -1126,10 +1126,10 @@
 </code></pre>
 
 <ul>
-<li>增量更新接口。
-  eg:(1) 如果之前存在用户A, B; 现通过此接口导入用户B, C; 那么导入后A(不变), B(更新), C(新增)
-     (2) 如果之前存在用户A, B; 现通过此接口导入用户C; 那么导入后A(不变), B(不变), C(新增)
-     (3) 如果之前不存在用户; 现通过此接口导入用户A, B, C; 那么导入后A(新增), B(新增), C(新增)
+<li>增量更新接口。eg:
+  <li>(1) 如果之前存在用户A, B; 现通过此接口导入用户B, C; 那么导入后A(不变), B(更新), C(新增)</li>
+  <li>(2) 如果之前存在用户A, B; 现通过此接口导入用户C; 那么导入后A(不变), B(不变), C(新增)</li>
+  <li>(3) 如果之前不存在用户; 现通过此接口导入用户A, B, C; 那么导入后A(新增), B(新增), C(新增)</li>
 </li>
 </ul>
 
