--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
               </ul>
             </li>
           <li><a href="#四----开发demo">四， 开发demo</a></li>
+          <li><a href="#五----JSSDK">五， JSSDK</a></li>
         </ul>
 
       </header>
@@ -1729,9 +1730,13 @@ https://api.open.jituancaiyun.com/openapi/media/upload
 <h1>
 <a id="四----开发demo" class="anchor" href="#%E5%9B%9B----%E5%BC%80%E5%8F%91demo" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>四，    开发demo</h1>
 
-<p><a href="http://https://github.com/jituancaiyun/openapi-demo">Java Common Github DEMO</a></p>
+<p><a href="hhttps://github.com/jituancaiyun/openapi-demo">Java Common Github DEMO</a></p>
 
-<p><a href="http://https://github.com/jituancaiyun/openapi-demo">Java SDK Github DEMO</a></p>
+<p><a href="https://github.com/jituancaiyun/openapi-demo">Java SDK Github DEMO</a></p>
+
+<h1>
+<a id="五----JSSDK" class="anchor" href="#%E5%9B%9B----%E5%BC%80%E5%8F%91demo" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>五，    JSSDK</h1>
+<p><a href="jssdk.html">JSSDK DEMO</a></p>
       </section>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
