--- a/index.html
+++ b/index.html
@@ -1736,7 +1736,7 @@ https://api.open.jituancaiyun.com/openapi/media/upload
 
 <h1>
 <a id="五----JSSDK" class="anchor" href="#%E5%9B%9B----%E5%BC%80%E5%8F%91demo" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>五，    JSSDK</h1>
-<p><a href="https://github.com/jituancaiyun/openapi-demo">JSSDK DEMO</a></p>
+
 <blockquote>
 <p>开发者通过jssdk调用应用native的相关方法；</p>
 </blockquote>
@@ -1800,6 +1800,8 @@ window.JSBridge.requestHybrid({
 <li>返回说明：
 正常情况下处理成功会返回图片的BASE64编码放到data中</li>
 </ul>
+<h2>使用DEMO</h2>
+<p><a href="https://github.com/jituancaiyun/openapi-demo">JSSDK DEMO</a></p>
       </section>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
