--- a/index.html
+++ b/index.html
@@ -1742,11 +1742,11 @@ https://api.open.jituancaiyun.com/openapi/media/upload
 </blockquote>
 
 <h2>JSSDK使用步骤</h2>
-<h3>步骤一：应用中添加测试DEMO APP（群里联系管理员，或者将http://video.statics.cdn.imasheng.com/Hybrid/selectPic.html在app中打开）</h3>
+<h3>步骤一：应用中添加测试DEMO APP（群里联系管理员，或者将http://video.statics.cdn.jituancaiyun.com/Hybrid/selectPic.html在app中打开）</h3>
 <h3>步骤二：绑定域名（群里联系管理员，添加js安全域名）</h3>
 <h3>步骤三：引入JS文件</h3>
 <ul>
-<li>在需要调用JS接口的页面引入如下JS文件，（支持https）：<a href="http://video.statics.cdn.imasheng.com/Hybrid/src/bridge.js">http://video.statics.cdn.imasheng.com/Hybrid/src/bridge.js</a></li>
+<li>在需要调用JS接口的页面引入如下JS文件，（支持https）：<a href="http://video.statics.cdn.jituancaiyun.com/Hybrid/src/bridge.js">http://video.statics.cdn.jituancaiyun.com/Hybrid/src/bridge.js</a></li>
 </ul>
 <h3>步骤四：通过data注入权限验证配置</h3>
 <pre><code>
