--- a/signature.html
+++ b/signature.html
@@ -26,7 +26,7 @@
 <li>JsapiToken</li>
 <li>生成签名之前必须先了解一下JsapiToken，JsapiToken是开放平台用于调用APP JS接口的临时票据。正常情况下，JsapiToken的有效期为7200秒，通过accessToken来获取。由于获取JsapiToken的api调用次数非常有限，频繁刷新JsapiToken会导致api调用受限，影响自身业务，开发者必须在自己的服务全局缓存JsapiToken 。</li>
 
-<li>用accessToken 采用http GET方式请求获得JsapiToken（有效期7200秒，开发者必须在自己的服务全局缓存accessToken）：https://api.open.imasheng.com/openapi/token/getJsapiToken?accessToken=***
+<li>用accessToken 采用http GET方式请求获得JsapiToken（有效期7200秒，开发者必须在自己的服务全局缓存accessToken）：https://api.open.jituancaiyun.com/openapi/token/getJsapiToken?accessToken=***
 成功返回如下JSON：
 {
 "jsapiToken":"bxLdikRXVbTPdHSM05e5u5sUoXNKd8-41ZO3MhKoyN5OfkWITDGgnr2fwJ0m9E8NYzWKVZvdVtaUgWvsdshFKA",
